[tool.poetry]
name = "mariner"
version = "0.2.0"
description = "Web application for controlling MSLA 3D Printers based on ChiTu 4.4.3 controller"
license = "MIT"
readme = "README.rst"
authors = [
  "Luiz Ribeiro <luizribeiro@gmail.com>",
  "Neil Larmour <bluefinbima@gmail.com>",
]

[tool.poetry.scripts]
mariner = 'mariner.server:main'

[tool.poetry.dependencies]
flask = "2.2.2"
flask-caching = "1.10.1"
Flask-WTF = "1.0.1"
pypng = "0.0.21"
pyre-extensions = "0.0.29"
pyserial = "3.5"
python = "^3.8"
toml = "0.10.2"
typedstruct = "0.1.0"
waitress = "2.1.2"
whitenoise = "6.0.0"
pycryptodome = "^3.15.0"
numpy = "^1.23.2"

[tool.poetry.dev-dependencies]
black = "22.8.0"
flake8 = "5.0.4"
freezegun = "1.2.1"
green = "3.4.1"
pyexpect = "1.0.21"
pyfakefs = "4.7.0"
pyre-check = "0.9.10"
python-language-server = "0.36.2"
pylint = "^2.15"

[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"